<resources>
    <string name="app_name">SweetDiary</string>
    <string name="inserted">Transfer data successfully</string>
    <string name="insert_failed">File transfer failed</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="blood_level">Blood Level</string>
    <string name="date_time">Date Time</string>
    <string name="body_weight">body weight</string>
    <string name="drugs">Drugs</string>
    <string name="amount_of_medication">Amount of Medication</string>
    <string name="health_status">Health Status</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="heighht">Height</string>
    <string name="not_required">not required</string>
    <string name="next">next</string>
    <string name="not_changed">not changed</string>
    <string name="when_measure">when did you measure ?</string>
    <string name="sober">sober</string>
    <string name="before">before the meal</string>
    <string name="after">after the meal</string>
    <string name="feel">how do you feel ?</string>
    <string name="good">Good</string>
    <string name="normal">normal</string>
    <string name="bad">bad</string>
    <string name="to_save">to save</string>
    <string name="meal">wich meal ?</string>
    <string name="bwtostart">Body weight at the beginning</string>
    <string name="evaluation">evaluation</string>
    <string name="oneweek">1 Week</string>
    <string name="twoweek">2 Weeks</string>
    <string name="onemonth">1 Month</string>
    <string name="backtostart">to start</string>
    <string name="back">back</string>
    <string name="period">Period last</string>
    <string name="send">send</string>
    <string name="recall">recall</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="message">Error</string>
    <string name="buttonpoint">...</string>

</resources>
