<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/health_green"
    tools:context=".SecondaryActivity">

    <TextView
        android:id="@+id/tvappnamesecondary"
        android:layout_width="203dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/indieflower"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/tvwhenmeasure"
        android:layout_width="235dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/indieflower"
        android:text="@string/when_measure"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />


    <TextView
        android:id="@+id/tvfeel"
        android:layout_width="220dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/indieflower"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/feel"
        android:textAllCaps="false"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/to_save"
        android:textAllCaps="false"
        android:background="@color/health_green"
        android:fontFamily="@font/indieflower"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/rGmeasure"
        android:layout_width="380dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255">

        <RadioButton
            android:id="@+id/rbsober"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickmeasure"
            android:text="@string/sober" />

        <RadioButton
            android:id="@+id/rbbefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickmeasure"
            android:text="@string/before" />

        <RadioButton
            android:id="@+id/rbafter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickmeasure"
            android:text="@string/after" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvmeal"
        android:layout_width="220dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/indieflower"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/meal"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <RadioGroup
        android:id="@+id/rGmeal"
        android:layout_width="380dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538">

        <RadioButton
            android:id="@+id/rbsnack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickmeal"
            android:text="@string/snack" />

        <RadioButton
            android:id="@+id/rbbrekfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickmeal"
            android:text="@string/breakfast" />

        <RadioButton
            android:id="@+id/rblunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickmeal"
            android:text="@string/lunch" />

        <RadioButton
            android:id="@+id/rbdinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickmeal"
            android:text="@string/dinner" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rGfeel"
        android:layout_width="381dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809">

        <RadioButton
            android:id="@+id/rbgood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickfeel"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/rbnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickfeel"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/rbbad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indieflower"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onklickfeel"
            android:text="@string/bad" />
    </RadioGroup>



</android.support.constraint.ConstraintLayout>